# oasis

./: .env.example  .gitignore  README.md  SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  build.rs  detector.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: carbon.rs  commands.rs  engine.rs  etw.rs  iphelper.rs  lib.rs  main.rs  pdh.rs  procctl.rs  rules.rs  sandbox.rs  wfp.rs
src/components/: Layout.tsx
src/context/: ShieldContext.tsx
src/pages/: Climate.tsx  Dashboard.tsx  DataBudget.tsx  DevSandbox.tsx  Focus.tsx  InterfaceThroughput.tsx  LiveMonitor.tsx  Privacy.tsx  RulesControls.tsx  SandboxOverlay.tsx  SpikeLog.tsx
