[package]
name = "app"
version = "0.1.0"
description = "Data Guardian — Tauri v2 network management engine"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
chrono = "0.4"
tokio = { version = "1.36", features = ["full"] }

# windows-sys: official Microsoft raw bindings (C ABI, no Option wrappers).
# Deterministic signatures — no "windows crate" safe-wrapper ambiguity.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Diagnostics_ToolHelp",
] }
